# llm_observability_LD

./: .env  .env.example  README.md  app.py  openai_client.py  pyproject.toml  requirements.txt
static/: index.html  style.css
