[project]
name = "llm-observability-ld"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.3",
    "launchdarkly-observability>=0.1.1",
    "launchdarkly-server-sdk-ai>=0.10.1",
    "openai>=2.8.1",
    "opentelemetry-instrumentation-openai==0.40.14",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.38.0",
]
